testdata/baselines/reference/submodule/conformance/jsdocTemplateTagNameResolution.errors.txt
file.js(9,12): error TS2304: Cannot find name 'Foo'.


==== file.js (1 errors) ====
    /**
     * @template T
     * @template {keyof T} K
     * @typedef {T[K]} Foo
     */
    
    const x = { a: 1 };
    
    /** @type {Foo<typeof x, "a">} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    const y = "a";